# awos-data-engineering-showroom

./: .gitignore  .mcp.json  CLAUDE.md  README.md  env.example  pyproject.toml  ruff.toml
.awos/subagents/: backend-python-expert.md
.claude/agents/domain-experts/: backend-python-expert.md  data-orchestration-pipeline.md  data-quality-engineer.md  dbt-data-modeler.md  dlt-data-ingestion.md  eda-duckdb-analyst.md  frontend-react-expert.md  (+1 more)
airflow/: .gitignore  airflow.cfg
airflow/dags/: bike_weather_dag.py  data_quality_dag.py
context/product/: architecture.md  product-definition-lite.md  product-definition.md  roadmap.md
data_quality/: __init__.py  store_results.py  validate_all.py  validate_bike_data.py  validate_weather_data.py
data_quality/gx/: great_expectations.yml
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/tests/: test_stg_weather_partial_data.sql
dlt_pipeline/: __init__.py  bike.py  games.py  holidays.py  weather.py
dlt_pipeline/.dlt/: config.toml  secrets.toml
great_expectations/: great_expectations.yml  validate_data.py
great_expectations/checkpoints/: bike_trips_checkpoint.yml  weather_checkpoint.yml
great_expectations/expectations/: bike_trips_suite.json  weather_suite.json
notebooks/: marts_eda.ipynb  polars_eda.ipynb
old_context/product/: product-definition.md  roadmap.md
streamlit_app/: Home.py
streamlit_app/pages/: Data_Quality.py  Demand_Forecast.py  Game_Impact.py  Holiday_Impact.py  Weather.py
tests/: __init__.py  test_bike_pipeline.py  test_holiday_pipeline.py  test_weather_pipeline.py
(+81 files in other folders)
